--- a/coverletter.tex
+++ b/coverletter.tex
@@ -13,25 +13,27 @@
 % CC BY-SA 4.0 (https://creativecommons.org/licenses/by-sa/4.0/)
 %
 
-
+\title{Cover Letter}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Configuration
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%% Themes: Awesome-CV
 \documentclass[11pt, a4paper]{awesome-cv}
+\usepackage[ngerman]{babel}
+\usepackage{graphicx}
 
 %%% Override a directory location for fonts(default: 'fonts/')
 \fontdir[fonts/]
 
 %%% Configure a directory location for sections
-\newcommand*{\sectiondir}{cv/}
+\newcommand*{\sectiondir}{letter/}
 
 %%% Override color
 % Awesome Colors: awesome-emerald, awesome-skyblue, awesome-red, awesome-pink, awesome-orange
 %                 awesome-nephritis, awesome-concrete, awesome-darknight
 %% Color for highlight
 % Define your custom color if you don't like awesome colors
-\colorlet{awesome}{awesome-red}
+\colorlet{awesome}{awesome-lime}
 %\definecolor{awesome}{HTML}{CA63A8}
 %% Colors for text
 %\definecolor{darktext}{HTML}{414141}
@@ -44,33 +46,38 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%     3rd party packages
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%% Needed to divide into several files
+\usepackage{import}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     Personal Data
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%% Essentials
-\name{Claud D.}{Park}
-\address{246-1002, Gwangmyeongmayrouge Apt. 86, Cheongna lime-ro, Seo-gu, Incheon-si, 404-180, Rep. of KOREA}
-\mobile{(+82) 10-9030-1843} 
+\name{Christian}{Seiler}
+\address{Milchgasse 14, CH-5000 Aarau, Schweiz}
+\mobile{(+41) 79 289 31 93}
+\birthday{31. Dezember 1987}
 %%% Social
-\email{posquit0.bj@gmail.com}
-\homepage{www.posquit0.com}
-\github{posquit0}
-\linkedin{posquit0}
+\email{christian@christianseiler.ch}
+\homepage{www.christianseiler.ch}
+%\github{christian-seiler}
+%\stackoverflow{2807608}{christian-seiler}
+%\linkedin{christian-seiler}
+%\twitter{christerseiler}
+%\skype{}
+%\reddit{}
+%\xing{}
+%\extrainfo{}
+
+
 %%% Optionals
-\position{Software Engineer{\enskip\cdotp\enskip}Security Expert}
-\quote{``Make the change that you want to see in the world."}
+%\position{Software Engineer{\enskip\cdotp\enskip}Security Expert}
+%\quote{``Make the change that you want to see in the world."}
 
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%     Letter Data (Cover Letter)
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\recipient
-  {Company Recruitment Team}
-  {Google Inc.\\1600 Amphitheatre Parkway\\Mountain View, CA 94043}
-\letterdate{\today}
-\lettertitle{Job Application for Software Engineer}
-\letteropening{Dear Mr./Ms./Dr. LastName,}
-\letterclosing{Sincerely,}
-\letterenclosure[Attached]{Curriculum Vitae}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -79,30 +86,17 @@
 %%% Make a footer for CV with three arguments(<left>, <center>, <right>)
 \makecvfooter
   {\today}
-  {Claud D. Park~~~·~~~Cover Letter}
+  {Christian Seiler~~~·~~~Cover Letter}
   {}
 
 \begin{document}
+
 %%% Make a header for CV using personal data
 \makecvheader
 
-%%% Make a title for Cover Letter using letter data
-\makelettertitle
 
-%%% Write content for your cover letter
-\begin{cvletter}
-\cvparagraph{About Me}
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ullamcorper neque sit amet lectus facilisis sed luctus nisl iaculis. Vivamus at neque arcu, sed tempor quam. Curabitur pharetra tincidunt tincidunt. Morbi volutpat feugiat mauris, quis tempor neque vehicula volutpat. Duis tristique justo vel massa fermentum accumsan. Mauris ante elit, feugiat vestibulum tempor eget, eleifend ac ipsum. Donec scelerisque lobortis ipsum eu vestibulum. Pellentesque vel massa at felis accumsan rhoncus.
-
-\cvparagraph{Why Google?}
-Suspendisse commodo, massa eu congue tincidunt, elit mauris pellentesque orci, cursus tempor odio nisl euismod augue. Aliquam adipiscing nibh ut odio sodales et pulvinar tortor laoreet. Mauris a accumsan ligula. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse vulputate sem vehicula ipsum varius nec tempus dui dapibus. Phasellus et est urna, ut auctor erat. Sed tincidunt odio id odio aliquam mattis. Donec sapien nulla, feugiat eget adipiscing sit amet, lacinia ut dolor. Phasellus tincidunt, leo a fringilla consectetur, felis diam aliquam urna, vitae aliquet lectus orci nec velit. Vivamus dapibus varius blandit.
-
-\cvparagraph{Why Me?}
-Duis sit amet magna ante, at sodales diam. Aenean consectetur porta risus et sagittis. Ut interdum, enim varius pellentesque tincidunt, magna libero sodales tortor, ut fermentum nunc metus a ante. Vivamus odio leo, tincidunt eu luctus ut, sollicitudin sit amet metus. Nunc sed orci lectus. Ut sodales magna sed velit volutpat sit amet pulvinar diam venenatis.
+%%% Import contents
+\import{\sectiondir}{Vollmacht_PDAG.tex}
 
 \end{cvletter}
-
-%%% Make a closing for Cover Letter using letter data
-\makeletterclosing
-
 \end{document}
